# multi-party-ecdsa

./: .gitignore  Cargo.toml
.github/workflows/: Basic.yml
examples/: dkr.rs  gg20_keygen.rs  gg20_signing.rs  keygen.sh  reshaing.rs  test_keygen_sign.sh  test_params.json
src/protocols/multi_party_ecdsa/gg_2020/: party_i.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/: keygen.rs  mod.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/keygen/: rounds.rs
src/protocols/multi_party_ecdsa/gg_2020/state_machine/reshaing/: add_party_message.rs  range_proofs.rs  refresh_message.rs  ring_pedersen_proof.rs  test.rs  zk_pdl_with_slack.rs
src/utilities/: mod.rs
src/utilities/bip32/: mod.rs
