[package]
name = "multi-party-ecdsa"
version = "0.8.1"
edition = "2018"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[features]
default = ["curv-kzen/rust-gmp-kzen"]
cclst = ["class_group"]

[dependencies]
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"
async-std = { version = "1.12.0", features = ["attributes"] }
opentelemetry = {version = "0.18.0", features = ["rt-tokio", "rt-async-std"]}                # A metrics collection and distributed tracing framework
opentelemetry-otlp ={version = "0.11.0", features = ["tonic", "trace", "tls", "tls-roots"]}           # Exporter for the OpenTelemetry Collector
tonic = {version = "0.8.0", features = ["tls"]}
opentelemetry-jaeger = {version = "0.17.0", features = ["rt-tokio"]}         # Jaeger exporter for OpenTelemetry
tokio = { version = "1.0", features = ["full"] }
serde_derive = "1.0.102"
serde_json = "1.0"
opentelemetry-semantic-conventions = "0.10.0"    # Semantic conventions for OpenTelemetry
url = "2.3.1"                 # URL library for Rust, based on the WHATWG URL Standard

[dependencies.bitvec]
version = "1"
default-features = false
features = ["atomic", "alloc"]

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true

[dev-dependencies]
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8"
surf = "2"
async-sse = "5"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}

thiserror = "1.0.23"
round-based = { version = "0.1.4", features = ["dev"] }

[[example]]
name = "common"
crate-type = ["lib"]
